--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,30 @@
 services:
   db:
-    image: postgres:latest
+    image: 'postgres:15.3-alpine'
     environment:
-      POSTGRES_USER:
-      POSTGRES_PASSWORD:
-      POSTGRES_DB:
+      POSTGRES_USER: *postgres user name*
+      POSTGRES_PASSWORD: *postgres user password*
+      POSTGRES_DB: *postgres db name*
+      PGDATA: /var/lib/postgresql/data
     volumes:
-        - type: bind
-          source: C:\Docker\pgdata\
-          target: /var/lib/postgresql/data
+      - *docker volume name*:/var/lib/postgresql
     restart: on-failure
     ports:
-      - "5432:5432"
+      - '5730:5432' # external port (change on your own if need):internal default port(don't change it)
   bot:
     build: .
     environment:
-      DB_HOST:
-      DB_NAME:
-      DB_PASS:
-      DB_USER:
-      TOKEN:
+      DB_HOST: db # internal network name (don't change)
+      DB_NAME: *postgres db name*
+      DB_PASS: *postgres user password*
+      DB_USER: *postgres user name*
+      TOKEN: *bot token (str)*
     restart: always
+    links:
+      - db
     depends_on:
       - db
 
 volumes:
-  pgdata:
+  *docker volume name*:
+    external: true
